@@ -12,7 +12,7 @@ RUN chmod +x mvnw && ./mvnw dependency:go-offline -B
 
 # Copia o código e empacota
 COPY src ./src
-RUN ./mvnw clean package -DskipTests -B
+RUN ./mvnw clean package -Dmaven.test.skip=true -B
 
 # ===== Runtime stage =====
 FROM eclipse-temurin:21-jre-alpine
@@ -28,4 +28,17 @@ USER spring
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+ENTRYPOINT ["java", \
+  "-XX:+UseZGC", \
+  "-XX:+ZGenerational", \
+  "-Xms2g", \
+  "-Xmx3g", \
+  "-XX:+AlwaysPreTouch", \
+  "-XX:SoftMaxHeapSize=2560m", \
+  "-XX:ZCollectionInterval=5", \
+  "-XX:+OptimizeStringConcat", \
+  "-XX:ReservedCodeCacheSize=256m", \
+  "-XX:+UseCompressedOops", \
+  "-XX:+UseCompressedClassPointers", \
+  "-Djava.awt.headless=true", \
+  "-jar", "/app/app.jar"]
